# desktop-figures

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
apps/desktop/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs  meshy.rs  mod.rs  window.rs
apps/desktop/src/hooks/: useDragDrop.ts  useGenerationGate.ts  useImageUrl.ts  useJobPoller.ts  useScheduler.ts  useWindowControl.ts
apps/desktop/src/lib/: authApi.ts  glbUtils.ts  imageUtils.ts  llm.ts  meshy.ts  sqlite.ts  sync.ts
apps/desktop/src/repository/: actionRepository.ts  characterRepository.ts  userProfileRepository.ts
apps/desktop/src/store/: actionStore.ts  appStore.ts  authStore.ts  characterStore.ts
docs/: meshy-setup.md
docs/superpowers/plans/: 2026-05-31-3d-character.md  2026-05-31-membership-admin-approval.md  2026-06-01-character-color-sleep-animation.md  2026-06-01-setup-whitebg-contextmenu.md
docs/superpowers/specs/: 2026-05-31-3d-character-design.md  2026-05-31-membership-admin-approval-design.md  2026-06-01-character-color-sleep-animation-design.md  2026-06-01-sleep-animation-and-action-presets-design.md
gradle/wrapper/: gradle-wrapper.properties
services/admin-server/: build.gradle.kts
services/auth-server/: build.gradle.kts
services/socket-server/: build.gradle.kts
(+51 files in other folders)
